# src/routes/fixture/matchesRouter.js
@@ -19,7 +19,11 @@ import checkLocation from '../../middlewares/matches/checkLocation.js'
 import editMatch from '../../services/fixture/matches/editMatch.js'
 import validateTeamScore from '../../middlewares/matches/validateTeamScore.js'
 import validateTeamIdDoNotExist from '../../middlewares/teams/validateTeamIdDoNotExist.js'
-import checkIfMatchExist from '../../middlewares/matches/checkIfMatchExist.js'
+import checkIfGroupStagePointsPerMatchAreSet from '../../services/fixture/stages/checkIfGroupStagePointsPerMatchAreSet.js'
+import { runValidateStageExistbyId, runValidateStageId } from './stagesRouter.js'
+import editGroupMatch from '../../services/fixture/matches/editGroupMatch.js'
+import checkDatePlusPastDate from '../../middlewares/matches/checkDatePlusPastDate.js'
+import editGroupMatchScore from '../../services/fixture/matches/editGroupMatchScore.js'
 
 const matchesRouter = express.Router()
 
@@ -29,7 +33,7 @@ const runValidateCreateGroupMatchData = runValidations([
     validateGroupId,
     validateStageId,
     checkIfStageExistById,
-    checkDate,
+    checkDatePlusPastDate,
     checkTime,
     checkLocation
 ])
@@ -39,7 +43,7 @@ const runValidateKnockoutMatchKnownTeams = runValidations([
     validateTeamId('visitorTeamId'),
     validateStageId,
     checkIfStageExistById,
-    checkDate,
+    checkDatePlusPastDate,
     checkTime,
     checkLocation
 ])
@@ -60,13 +64,9 @@ const runValidateKnockoutMatchKnownTeamsEdit = runValidations([
     checkLocation
 ])
 
-const runValidateGroupMatcEdit = runValidations([
+const runValidateGroupMatchEdit = runValidations([
     validateTeamId('localTeamId'),
     validateTeamId('visitorTeamId'),
-    validateTeamScore('localTeamScore'),
-    validateTeamScore('visitorTeamScore'),
-    validateTeamScore('localTeamPenaltyScore'),
-    validateTeamScore('visitorTeamPenaltyScore'),
     validateGroupId,
     validateStageId,
     checkIfStageExistById,
@@ -75,6 +75,18 @@ const runValidateGroupMatcEdit = runValidations([
     checkDate,
     checkTime,
     checkLocation
+])
+
+const runValidateGroupMatchEditScore = runValidations([
+    validateMatchId,
+    validateMatchExist,
+    validateStageId,
+    checkIfStageExistById,
+    validateGroupId,
+    validateTeamId('localTeamId'),
+    validateTeamId('visitorTeamId'),
+    validateTeamScore('localTeamScore'),
+    validateTeamScore('visitorTeamScore')
 ])
 
 const runValidateKnockoutMatchUnknownTeamsEdit = runValidations([
@@ -98,7 +110,7 @@ const runValidateKnockoutMatchUnknownTeams = runValidations([
     validateTeamPlaceholder('visitorTeamPlaceholder'),
     validateStageId,
     checkIfStageExistById,
-    checkDate,
+    checkDatePlusPastDate,
     checkTime,
     checkLocation
 ])
@@ -133,8 +145,16 @@ matchesRouter.post('/edit-known-teams',
 )
 
 matchesRouter.post('/edit-group-match',
-    runValidateGroupMatcEdit,
-    editMatch
+    runValidateStageId,
+    runValidateStageExistbyId,
+    runValidateGroupMatchEdit,
+    editGroupMatch
+)
+
+matchesRouter.post('/edit-group-match-score',
+    runValidateGroupMatchEditScore,
+    checkIfGroupStagePointsPerMatchAreSet,
+    editGroupMatchScore
 )
 
 matchesRouter.post('/edit-unknown-teams',
